2010-05-24  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc32/lshiftc.asm: New file.

2010-05-22  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mod_1): Revert to version of 2010-05-06.

2010-05-17  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (ia64): Get 32-bit sizeof test right.

	* tune/tuneup.c (tune_mod_1): Undo unintensional change to tuning of
	PREINV_MOD_1_TO_MOD_1_THRESHOLD.

2010-05-16  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/sparc64/mod_1.c: Rewrite.
	* mpn/sparc64/sparc64.h (umul_ppmm_s): New macro.
	* mpn/sparc64/mod_1_4.c: New file.

	* mpn/generic/divrem_1.c: Minor cleanup.
	* mpn/generic/mod_1.c: Likewise.
	* mpn/generic/mod_1_1.c: Likewise.
	* mpn/generic/mod_1_2.c: Likewise.
	* mpn/generic/mod_1_3.c: Likewise.
	* mpn/generic/mod_1_4.c: Likewise.

	* configure.in (ia64-hpux): Do sizeof tests for 32-bit and 64-bit ABI.

	* tune/tuneup.c (tune_mod_1): Completely finish MOD_1_N tuning before
	tuning MOD_1U_TO_MOD_1_1_THRESHOLD.

2010-05-14  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/redc_2.c: Use asm code just for GNU C.

2010-05-13  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/sparc64/ultrasparc1234: New directory.  Move all code that uses
	floating-point into this directory.
	* configure.in: Point to ultrasparc1234 for appropriate CPUs.

	* mpn/sparc64/ultrasparct1/add_n.asm: New file.
	* mpn/sparc64/ultrasparct1/addlsh2_n.asm: New file.
	* mpn/sparc64/ultrasparct1/addmul_1.asm: New file.
	* mpn/sparc64/ultrasparct1/lshift.asm: New file.
	* mpn/sparc64/ultrasparct1/mul_1.asm: New file.
	* mpn/sparc64/ultrasparct1/rsblsh2_n.asm: New file.
	* mpn/sparc64/ultrasparct1/rshift.asm: New file.
	* mpn/sparc64/ultrasparct1/sublsh1_n.asm: New file.
	* mpn/sparc64/ultrasparct1/sublshC_n.asm: New file.
	* mpn/sparc64/ultrasparct1/addlsh1_n.asm: New file.
	* mpn/sparc64/ultrasparct1/addlshC_n.asm: New file.
	* mpn/sparc64/ultrasparct1/lshiftc.asm: New file.
	* mpn/sparc64/ultrasparct1/rsblsh1_n.asm: New file.